# gopp2

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
external_libraries/: CMakeLists.txt
external_libraries/StraightforwardNeuralNetwork/: CMakeLists.txt
generate/: Color.hpp  ai.h  ai.hpp  cli.h  cli.hpp  cli_interface.h  cli_interface.hpp  color.h  dumb.h  dumb.hpp  engine.h  engine.hpp  game.h  game.h.orig  game.hpp  goban.h  goban.hpp  gui_interface.h  human.h  human.hpp  interface.h  interface.hpp  io.h  io.hpp  itself.h  itself.hpp  main.cpp  move.h  move.hpp  player.h  player.hpp  random.h  random.hpp  stone.h  stone.hpp
snn_models/9x9/: model_01.snn  model_v2.snn
src/: Interface.h2  ai.h2  cli.h2  cli_interface.h2  color.h2  dumb.h2  engine.h2  game.h2  game.h2.orig  goban.h2  goban_widget.h  gui.h  gui_interface.h2  human.h2  io.cpp  io.h  io.h2  itself.h2  lib.cpp  main.cpp2  move.h2  player.h2  random.h2  stone.h2  window.h
src/cpp1/: console_widget.h  cpp2_sources.cpp  goban_widget.cpp  goban_widget.h  learning_rate_box.cpp  learning_rate_box.h  snn.h  window.cpp  window.h
src/cpp2/: Interface.h2  ai.h2  cli.h2  cli_interface.h2  color.h2  engine.h2  game.h2  goban.h2  gui_interface.h2  human.h2  interface.h2  io.h2  itself.h2  main.cpp2  move.h2  player.h2  stone.h2  transformation.h2
